<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light_surface"
    tools:context=".ui.FirebaseLoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_login_name"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/textsize_sp_50"
        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/dancing_script"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_email"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_login_input"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_password"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8_dp"
        android:background="@drawable/shape_login_input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/login_email"
        app:layout_constraintStart_toStartOf="@id/login_email"
        app:layout_constraintTop_toBottomOf="@id/login_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12_dp"
        android:text="@string/login_in"
        android:textColor="@color/secondary_white"
        app:layout_constraintEnd_toEndOf="@id/login_email"
        app:layout_constraintStart_toStartOf="@id/login_email"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12_dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/do_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_account"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_12_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password" />

    <View
        android:id="@+id/login_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_40_dp"
        android:background="@color/primary_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/do_not_have_account"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/social_login_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30_dp"
        android:background="@color/primary_light_surface"
        android:paddingHorizontal="@dimen/margin_16_dp"
        android:text="@string/or"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/do_not_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>