<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light_surface"
    tools:context=".ui.FirebaseLoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16_dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="@dimen/margin_16_dp"
        android:text="@string/reset_password_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
        app:layout_constraintEnd_toEndOf="@id/reset_email"
        app:layout_constraintStart_toStartOf="@id/reset_email" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/reset_email"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_login_input"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintWidth_percent="0.8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_code_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:text="@string/send_code"
        android:textColor="@color/secondary_white"
        app:layout_constraintEnd_toEndOf="@id/reset_email"
        app:layout_constraintStart_toStartOf="@id/reset_email"
        app:layout_constraintTop_toBottomOf="@id/reset_email" />


</androidx.constraintlayout.widget.ConstraintLayout>